<resources>
    <string name="app_name">Visualize</string>

    <!-- TODO (4) Add string for Settings -->

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->

    <string name="pref_color_rd_label">Red</string>
    <string name="pref_color_green_label">Green</string>
    <string name="pref_color_blue_label">Blue</string>


    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="title">Setting</string>
    <string name="SettingActivity">Setting Activity</string>
    <string name="show_bass">show_bass</string>
    <string name="Shown">Shown</string>
    <string name="Hidden">Hidden</string>
    <string name="show_mid">show_mid</string>
    <string name="show_triple">show_triple</string>
    <string name="pref_list_color">pref_list_color</string>
    <string name="scale_default_value">.3</string>
    <string name="scale_key">scale_key</string>
</resources>
